fix(rl): fix spacing, background-color, & column width, and remove background from adjacent div in explore-rates

--- a/src/static/css/module/explore-rates.less
+++ b/src/static/css/module/explore-rates.less
@@ -561,11 +561,6 @@
       margin-top: 3.75em;
     }
 
-    .feedback {
-      background: @gray-5;
-      padding: 24px 15px 80px 15px;
-    }
-
 /*
     Alerts and warnings
     --------------------------- */
