--- a/src/static/css/module/related-links.less
+++ b/src/static/css/module/related-links.less
@@ -1,7 +1,17 @@
 .related-links {
-    
+  
    margin-right: -@grid_gutter-width / 2;
    margin-left: -@grid_gutter-width / 2;
+   
+   .respond-to-min(800px, {
+      margin-left: -30px;
+      margin-right: -30px;
+
+      & .content-l_col {
+        border-left-width: 30px;
+        border-right-width: 30px;
+      }
+    });
    
    .form-explainer &,
    .rate-checker_links & {
@@ -17,9 +27,26 @@
       margin-left: 0;
     });
     
-    .short-desc {
-      margin-bottom: @grid_gutter-width/6;
-      margin-top: @grid_gutter-width;
+    ul.related-links_list {
+      .list__unstyled;
+      
+      li {
+        margin-bottom: unit(28px / @base-font-size-px, em);
+      }
+      
+      .short-desc {
+        margin-bottom: unit(8px / @base-font-size-px, em);
+      }
+      
+      br {
+        display: none;
+      }
+      
+      .respond-to-min(800px, {
+        br {
+          display: block;
+        }
+      });
     }
     
     .content-l + .content-l {
